--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,26 @@
             <artifactId>uadetector-resources</artifactId>
             <version>2014.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.xrpl</groupId>
+            <artifactId>xrpl4j-client</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xrpl</groupId>
+            <artifactId>xrpl4j-address-codec</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xrpl</groupId>
+            <artifactId>xrpl4j-keypairs</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xrpl</groupId>
+            <artifactId>xrpl4j-model</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
