--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="4.0">
     <servlet>
         <servlet-name>AuthenticationController</servlet-name>
-        <servlet-class>com.xwtxumm.xummnftwalletcreator.AuthenticationController</servlet-class>
+        <servlet-class>com.xwtxumm.xummnftwalletcreator.controller.AuthenticationController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>AuthenticationController</servlet-name>
