--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
             <artifactId>jakarta.xml.bind-api</artifactId>
             <version>2.3.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.francisrosario.xrpl4j</groupId>
+            <artifactId>xrpl4j-model</artifactId>
+            <version>v2.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
