--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
         <dependency>
             <groupId>com.github.francisrosario</groupId>
             <artifactId>xumm4j</artifactId>
-            <version>0.2.1</version>
+            <version>development-c882372a72-1</version>
         </dependency>
     </dependencies>
 
